--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^5.2.0",
     "fs": "0.0.1-security",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.4.16",
     "path": "^0.12.7"
   }
 }
